[package]
name = "shuriken_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.69.4"

# [env]
# LIB_LINK_SEARCH = "/home/jgamba/dev/Shuriken-Analyzer/build/shuriken/"
